# pillar-motion

./: README.md  requirements.txt
configs/: nusc_pillarmotion.py
configs/dataset/: nusc_motion.yaml
configs/experiments/: nusc_motion.yaml
det3d/datasets/: base.py
det3d/datasets/loader/: collate.py
det3d/datasets/nuscenes/: __init__.py  nusc_motion.py  nuscenes_motion.py  rmground.py  split.p
det3d/models/backbones/: stpn.py
det3d/models/detectors/: motionnet.py
det3d/models/heads/: motionhead.py
det3d/models/loss/: chamferloss.py
det3d/models/readers/: pillarmotion_encoder.py
docker/: Dockerfile
motion/: builder.py
motion/core/: __init__.py
motion/core/input/: voxel_generator.py
motion/core/sampler/: preprocess.py
motion/core/utils/: __init__.py  dist_utils.py
motion/datasets/: __init__.py  builder.py  custom.py  dataset_factory.py  registry.py
motion/datasets/loader/: build_loader.py  sampler.py
motion/datasets/nuscenes/: __init__.py  flow.py  nusc_common.py  nuscenes.py
motion/datasets/pipelines/: __init__.py  compose.py  formating.py  loading.py  preprocess.py
motion/models/: __init__.py  builder.py  registry.py
motion/models/heads/: __init__.py  chamfer.py  motionhead.py
motion/solver/: learning_schedules.py  learning_schedules_fastai.py
motion/utils/: __init__.py  checkpoint.py  config_tool.py  loader.py  registry.py
tools/: create_data.py  train.py
tools/groundseg/: CMakeLists.txt  bin.cc  bin.h  ground_segmentation.cc  ground_segmentation.h  segment.cc  segment.h  segmentation.cc
trainer/trainer/: trainer.py
(+17 files in other folders)
